--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>:)))))</title>
 </head>
 <body>
-    hiiiiiii:)!!
-<a href="https://zxc20020808.github.io/">DAY1</a>
+    hiiiiiii:)!!<br>
+<a href="https://www.youtube.com/">DAY1</a>
 </body>
 </html>
