--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>:)))))</title>
+    <link rel="stylesheet" href="MyCss.css">
+
 </head>
 <body>
     hiiiiiii:)!!<br>
-<a href="https://www.youtube.com/">DAY1</a>
+    <a href="https://www.youtube.com/">DAY1</a>
+    <h1 style="color: #fae5ff">這是H1</h1>
+
+<div class="card">Card 1
+    <div>我是內部的div</div>
+    <p>我是P</p>
+</div>
+<div id="sss_card" class="card" >card2</div>
+<div class="card"> card 3 </div>
+<div class="card"> card 4 </div>
 </body>
 </html>
