--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">瓶中船</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -38,8 +38,8 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+                        <h1 class="mx-auto my-0 text-uppercase">垃此不疲</h1>
+                        <h2 class="text-white-50 mx-auto mt-2 mb-5">小垃の奇幻之旅</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
                 </div>
@@ -69,8 +69,8 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>劇情大綱</h4>
+                            <p class="text-black-50 mb-0">小垃被丟進垃圾垃圾子母車,他是一個破舊的狗狗造型寶寶枕頭,身上有些許髒污和幾條修補的縫線,靈魂從身體中飄出循著骨頭的方向前進,被神秘黑洞吸入來到了靈界市集,小垃看著其他正在使用老虎機轉世的物品,回憶起了生前與主人相處的歡樂時光還有最終不被需要被丟掉的傷心感受,對自我價值破碎的小垃放下過去決定跟隨老虎機的命運拉下拉霸,他轉到了大愛的符號,隨之小垃變身,身體的樣貌卻沒有發生絲毫的改變,在小垃的錯愕中空間縮了起來,小垃回到現實出現在陰暗的水溝裡,在雪天三隻疲憊的老鼠急促的爬到小垃身上,小垃一開始看到老鼠們感到厭惡,後來看到他們安穩的窩在他身上睡著,小垃感受到被需要的溫暖,慢慢釋懷並滿足的笑了。</p>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <p class="mb-0 text-white-50">靈魂市集</p>
                                 </div>
                             </div>
                         </div>
