--- a/index.html
+++ b/index.html
@@ -50,11 +50,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                        <h2 class="text-white mb-4">創作目的</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+                            希望透過這個故事能讓觀眾知道，人生就是一趟尋找自我價值的旅程，每個人的存在都是有意義的，不要妄自菲薄，總有抵達目的地的一天，你曾經的付出都有可能讓你對自己或某些人而言有意義。
                         </p>
                     </div>
                 </div>
@@ -75,7 +73,9 @@
                     </div>
                 </div>
                 <!-- Project One Row-->
+
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+
                     <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.png" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
@@ -96,15 +96,23 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">3D場景</h4>
-                                    <p class="mb-0 text-white-50">靈魂市集</p>
+                                    <p class="mb-0 text-white-50">靈魂市集-1</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="row gx-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/市集.jpg" alt="..." /></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                    <h4 class="text-white">2D場景</h4>
+                                    <p class="mb-0 text-white-50">靈魂市集-2</p>
+                                </div>
             </div>
         </section>
-
         <!-- Signup-->
         <section class="signup-section" id="signup">
             <div class="container px-4 px-lg-5">
